<resources>
    <string name="uk_overview">UK overview</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_saved_locations">Saved locations</string>
    <string name="menu_settings">Settings</string>

    <string name="empty_locations_title">You have no saved locations</string>
    <string name="empty_locations_body">Search for locations to see latest data</string>

    <string name="rising_cases">Rising cases</string>
    <string name="top_cases">Top cases</string>
    <string name="total_cases">Total cases</string>
    <string name="cases_this_week">Cases this week</string>
    <string name="daily_cases">Daily cases</string>
    <string name="cases_title">Positive cases in %s</string>

    <string name="latest_data_label">Last data provided on %s</string>
    <string name="updated_label">Last updated: %s</string>

    <string name="all_cases_chart_label">All cases</string>
    <string name="latest_cases_chart_label">Latest cases</string>
    <string name="rolling_average_chart_label">Rolling average</string>
    <string name="data_tab_label">Data</string>

    <string name="date_column_header">Date</string>
    <string name="new_cases_column_header">New Cases</string>
    <string name="total_cases_column_header">Total Cases</string>
    <string name="new_deaths_column_header">New Deaths</string>
    <string name="total_deaths_column_header">Total Deaths</string>
    <string name="new_admissions_column_header">New Admissions</string>
    <string name="total_admissions_column_header">Total Admissions</string>

    <string name="change_this_week">On last week</string>

    <string name="deaths_title">Deaths within 28 days of positive test in %s</string>
    <string name="ons_deaths_title">Weekly deaths in %s</string>
    <string name="total_deaths">Total deaths</string>
    <string name="deaths_this_week">Deaths this week</string>
    <string name="daily_deaths">Daily deaths</string>
    <string name="all_deaths_chart_label">All deaths</string>
    <string name="latest_deaths_chart_label">Latest deaths</string>

    <string name="hospital_admissions_title">Hospital admissions in %s</string>
    <string name="total_hospital_admissions">Total admissions</string>
    <string name="hospital_admissions_this_week">Admissions this week</string>
    <string name="daily_hospital_admissions">Daily admissions</string>
    <string name="all_hospital_admissions_chart_label">All\nadmissions</string>
    <string name="latest_hospital_admissions_chart_label">Latest\nadmissions</string>
    <string name="admissions_area_filter_subtitle">Select trust(s) to display</string>
    <string name="admission_area_filter_cta">Apply</string>

    <string name="top_infection_rates">Top infection rates</string>
    <string name="rising_infection_rates">Rising infection rates</string>
    <string name="current_infection_rate">Current infection rate</string>

    <string name="last_updated_date">Last updated: %s</string>
    <string name="position_format">%d.</string>

    <string name="area_menu_delete_item_prompt">Tap to delete location</string>
    <string name="area_menu_save_item_prompt">Tap to save location</string>
    <string name="area_data_error_message">Failed to load area data</string>
    <string name="sync_error_message">Failed to load latest data</string>
    <string name="retry">Retry</string>
    <string name="sync_notification_name">Data Alerts</string>
    <string name="sync_notification_success_description">Success Notification</string>
    <string name="sync_notification_success_content_title">New data</string>
    <string name="sync_notification_success_content_text">New data available</string>
    <string name="view_all">View all</string>

    <!-- Transmission rate -->
    <string name="transmission_rate_title">Estimated R number in %s</string>
    <string name="transmission_rate_current_rate_caption">Current R number</string>
    <string name="transmission_rate_growth_rate_caption">Daily growth rate</string>
    <string name="transmission_rate_value_format">%1$s to %2$s</string>

    <!-- Alert level -->
    <string name="alert_level_title">Restrictions in place</string>
    <string name="alert_level_more_information">View\ninformation</string>
    <string name="alert_level_failed_to_open_url">Failed to open %s</string>

    <!-- Search -->
    <string name="search_area_hint">Enter area name or postcode</string>
    <string name="search_area_menu_title">Search for locations</string>

    <!-- Infection rate map -->
    <string name="map_title_format">Infection rates up to %s</string>
    <string name="map_legend_missing_data">Missing data</string>
    <string name="map_legend_level_1">0 – 9</string>
    <string name="map_legend_level_2">10 – 49</string>
    <string name="map_legend_level_3">50 – 99</string>
    <string name="map_legend_level_4">100 – 199</string>
    <string name="map_legend_level_5">200 – 399</string>
    <string name="map_legend_level_6">400 – 799</string>
    <string name="map_legend_level_7">800+</string>
</resources>
