<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/menu_dashboard"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/saved"
        android:icon="@drawable/ic_bookmark_off"
        android:title="@string/menu_saved_locations"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>
