<?xml version="1.0" encoding="utf-8"?>
<com.chrisa.cron19.features.area.presentation.widgets.AreaDeathSummaryCard xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/totalDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toStartOf="@+id/changeInNewDeathsThisWeek"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1220" />

        <TextView
            android:id="@+id/totalDeathsCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/total_deaths"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintEnd_toEndOf="@id/dailyDeathsCaption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalDeaths" />

        <TextView
            android:id="@+id/dailyDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/currentNewDeaths"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22" />

        <TextView
            android:id="@+id/dailyDeathsCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/daily_deaths"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintStart_toStartOf="@id/changeInNewDeathsThisWeek"
            app:layout_constraintTop_toBottomOf="@id/dailyDeaths" />

        <TextView
            android:id="@+id/currentNewDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toStartOf="@+id/changeInNewDeathsThisWeek"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalDeathsCaption"
            tools:text="122" />

        <TextView
            android:id="@+id/currentNewDeathsCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/deaths_this_week"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentNewDeaths" />

        <TextView
            android:id="@+id/changeInNewDeathsThisWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/currentNewDeaths"
            app:layout_constraintTop_toBottomOf="@id/totalDeathsCaption"
            tools:text="22" />

        <TextView
            android:id="@+id/changeInDeathsThisWeekCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/change_this_week"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintStart_toStartOf="@id/changeInNewDeathsThisWeek"
            app:layout_constraintTop_toBottomOf="@id/currentNewDeaths" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.chrisa.cron19.features.area.presentation.widgets.AreaDeathSummaryCard>
