<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="totalHospitalAdmissions"
            type="Integer" />

        <variable
            name="dailyHospitalAdmissions"
            type="Integer" />

        <variable
            name="currentNewHospitalAdmissions"
            type="Integer" />

        <variable
            name="changeInNewHospitalAdmissionsThisWeek"
            type="Integer" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/totalHospitalAdmissions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:formattedInt="@{totalHospitalAdmissions}"
                app:layout_constraintEnd_toStartOf="@+id/changeInNewHospitalAdmissionsThisWeek"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1220" />

            <TextView
                android:id="@+id/totalHospitalAdmissionsCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/total_hospital_admissions"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="@id/dailyHospitalAdmissionsCaption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/totalHospitalAdmissions" />

            <TextView
                android:id="@+id/dailyHospitalAdmissions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:formattedInt="@{dailyHospitalAdmissions}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/currentNewHospitalAdmissions"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="22" />

            <TextView
                android:id="@+id/dailyHospitalAdmissionsCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/daily_hospital_admissions"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintStart_toStartOf="@id/changeInNewHospitalAdmissionsThisWeek"
                app:layout_constraintTop_toBottomOf="@id/dailyHospitalAdmissions" />

            <TextView
                android:id="@+id/currentNewHospitalAdmissions"
                changeTextColor="@{currentNewHospitalAdmissions}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:formattedInt="@{currentNewHospitalAdmissions}"
                app:layout_constraintEnd_toStartOf="@+id/changeInNewHospitalAdmissionsThisWeek"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/totalHospitalAdmissionsCaption"
                tools:text="122" />

            <TextView
                android:id="@+id/currentNewHospitalAdmissionsCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/hospital_admissions_this_week"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currentNewHospitalAdmissions" />

            <TextView
                android:id="@+id/changeInNewHospitalAdmissionsThisWeek"
                changeTextColor="@{changeInNewHospitalAdmissionsThisWeek}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:formattedInt="@{changeInNewHospitalAdmissionsThisWeek}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/currentNewHospitalAdmissions"
                app:layout_constraintTop_toBottomOf="@id/totalHospitalAdmissionsCaption"
                tools:text="22" />

            <TextView
                android:id="@+id/changeInHospitalAdmissionsThisWeekCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/change_this_week"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintStart_toStartOf="@id/changeInNewHospitalAdmissionsThisWeek"
                app:layout_constraintTop_toBottomOf="@id/currentNewHospitalAdmissions" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
